--- a/Rastera/asnic/rastera/kine-group.html
+++ b/Rastera/asnic/rastera/kine-group.html
@@ -173,7 +173,6 @@ Kid.Append
    
 莱昂.定义:词类.艾昂尼克:~沃德
   关键分析：不是声明体 水 不问
-
   词类.莱昂.动, 形容
     词性.动.助动词 形容.拟声词
   词类.莱昂.洛克梅根:动, 形容
@@ -190,13 +189,14 @@ Kid.Append
 
 
 宏微引顺：微观 宏观  顺序 索引 
-  *关键点：大气层 
+  *关键点：大气层 争斗 视力模糊
   \\重力 关系而围绕着地球的一层混合气体，是地球最外部的气体圈层，包围着海洋和陆地，大气层的厚度大约在1000千米以上，但没有明显的界限
   \\大气中组分是不稳定的，无论是自然灾害，还是人为影响，会使大气中出现新的物质，
   \\或某种成分的含量过多地超出了自然状态下的平均值，或某种成分含量减少，都会影响生物的正常发育和生长，给人类造成危害。
 
 群组与细胞
 
+莱昂.词类 第 174s 行
 群组：形成 组合 分散  
   人类角度.绝断离：绝对断开：仅仅一次
 莱昂尼克:词类与磁性 水细胞体 纯固体
@@ -226,7 +226,7 @@ Kid.Append
     动形 @General  Special // Usually particularly 
   
 人类角度:未知生命体 形态体 动物想象力 
-  @Sprite.Renliy:Renlie:Renlay
+  @GeoSprite.Renliy:Renlie:Renlay
       EyeVision.Vertical
         God
           Religious
@@ -244,9 +244,9 @@ Kid.Append
       Underwater
     Renlie.Rotate
 
-  @ Anni:Ani Animale
+  @ Anni Animale
       Renliy.Undiscover:
-      Anyin.Acquire
+      Anni.Acquire
         CellLike
         Painot.Standout
           However.LightNeed.WithoutWrapped
@@ -286,8 +286,8 @@ Kid.Append
 
 群组.内部
   天启与附体
-  善良解释邪恶:邪恶直射善良
-  关键点：语言 分析历史节点：下毒
+  善良解释邪恶:直射善良
+  关键点：语言  下毒.历史节点分析
   忘江皿 //Handless
   //Geniz.Jealous
 组群.外部
