--- a/Rastera/asnic/rastera/matrix.html
+++ b/Rastera/asnic/rastera/matrix.html
@@ -47,7 +47,13 @@ No aging
 　　
 　　白羊座、金牛座、双子座、巨蟹座、狮子座、处女座、天秤座、天蝎座、射手座、摩羯座、水瓶座、双鱼座。
 　　
-　　北冕座、船尾座、仙后座、人马座、小马座、天龙座、仙王座、鹿豹座、御夫座、猎犬座、狐狸座、天鹅座、小狮座、英仙座、牧夫座、武仙座、后发座、罗盘座、天猫座、小熊座、大熊座、天琴座、三角座、天箭座、巨蟹座、白羊座、双子座、宝瓶座、室女座、天燕座、金牛座、双鱼座、摩羯座、飞鱼座、矩尺座、天蝎座、天鹰座、蛇夫座、巨爵座、波江座、巨蛇座、蝎虎座、乌鸦座、仙女座、长蛇座、鲸鱼座、天坛座、绘架座、苍蝇座、山案座、天炉座、狮子座、小犬座、天秤座、剑鱼座、时钟座、杜鹃座、盾牌座、唧筒座、南冕座、豺狼座、猎户座、水蛇座、凤凰座、孔雀座、南极座、网罟座，圆规座、蝘蜓座、天鹤座、大犬座、天鸽座、南鱼座、天兔座，船底座、船帆座、玉夫座、麒麟座、海豚座、飞马座、雕具座、南三角座、印第安座、南十字座、显微镜座、半人马座、六分仪座、望远镜座
+    北冕座、船尾座、仙后座、人马座、小马座、天龙座、仙王座、鹿豹座、御夫座、猎犬座、狐狸座、天鹅座、
+    小狮座、英仙座、牧夫座、武仙座、后发座、罗盘座、天猫座、小熊座、大熊座、天琴座、三角座、天箭座、巨蟹座、
+    白羊座、双子座、宝瓶座、室女座、天燕座、金牛座、双鱼座、摩羯座、飞鱼座、矩尺座、天蝎座、天鹰座、蛇夫座、
+    巨爵座、波江座、巨蛇座、蝎虎座、乌鸦座、仙女座、长蛇座、鲸鱼座、天坛座、绘架座、苍蝇座、山案座、天炉座、
+    狮子座、小犬座、天秤座、剑鱼座、时钟座、杜鹃座、盾牌座、唧筒座、南冕座、豺狼座、猎户座、水蛇座、凤凰座、
+    孔雀座、南极座、网罟座，圆规座、蝘蜓座、天鹤座、大犬座、天鸽座、南鱼座、天兔座，船底座、船帆座、玉夫座、
+    麒麟座、海豚座、飞马座、雕具座、南三角座、印第安座、南十字座、显微镜座、半人马座、六分仪座、望远镜座
 
 [解释定义]
 　　宗教 点面 实虚sphere 
@@ -106,7 +112,7 @@ Anti-Fusion|物理身躯 -> 不用伯恩感知
 
 
 负Rat（count(?.*)
-M&m 熊猫<凶吗>
+M&m 熊猫 凶吗
 五官谁优先
 　　身体靠两边
 　　尾巴
