--- a/Rastera/asnic/access-term/term.html
+++ b/Rastera/asnic/access-term/term.html
@@ -82,11 +82,11 @@ Ket:Get
     Kaetseof
     Ket-VθS-s?lf = PSI whenAsnic SnicTime
    COF
-    SelfGet Core-Get Your followers
+    SelfKet Core-Get Your followers forefathers
     Used to follow one's commend then portalled for reasons
 
     ? Beat out ae hazard PBC FBC ?
-    ?hronosphere
+    Chronosphere
 
   SelfGet Sefket 
         力有关.Transcolor 调换
@@ -173,8 +173,6 @@ EvenSquare
 OnceAlways	
 
 AJAX Codex
-
-
 </pre>
 
         <div id="compiler">
