--- a/Rastera/asnic/arrange-beauty/mfs.html
+++ b/Rastera/asnic/arrange-beauty/mfs.html
@@ -42,7 +42,7 @@ Puberty
 sexual organs develop and they become capable of having children
 Impulse
 Gaphole 上下前后左右
-? 地底人矮小
+? 地底人矮小 侏儒体型丢失节点 谁想过关于细胞分列与融合
 WJCKING.空间
 
     VθS SnicTime TimeSnical whenØsnic 时空（之-日-z）缘
