--- a/Rastera/asnic/crealmytth/revelation.html
+++ b/Rastera/asnic/crealmytth/revelation.html
@@ -58,13 +58,15 @@ E.g. 菩萨 白老鼠 雷锋
 　　澳大利亚
 　　
 　　非洲
-　　g.贩卖黑奴
+　　  贩卖黑奴
 
 地理意识形态结束
 
 蝴蝶效应
 塔西陀陷阱
-　　得名于古罗马时代的历史学家塔西佗。这一概念最初来自塔西佗所著的《塔西佗历史》，是塔西佗在评价一位罗马皇帝时所说的话：“一旦皇帝成了人们憎恨的对象，他做的好事和坏事就同样会引起人们对他的厌恶。”之后被中国学者引申成为一种现社会现象，指当政府部门或某一组织失去公信力时，无论说真话还是假话，做好事还是坏事，都会被认为是说假话、做坏事。
+  得名于古罗马时代的历史学家塔西佗。这一概念最初来自塔西佗所著的《塔西佗历史》，是塔西佗在评价一位罗马皇帝时所说的话：
+  “一旦皇帝成了人们憎恨的对象，他做的好事和坏事就同样会引起人们对他的厌恶。”之后被中国学者引申成为一种现社会现象，指当政府部门或某一组织失去公信力时，
+  无论说真话还是假话，做好事还是坏事，都会被认为是说假话、做坏事。
 爆炸性多米诺骨牌
 
 转制 AADR Matrix
