--- a/Rastera/asnic/iw/wdc.html
+++ b/Rastera/asnic/iw/wdc.html
@@ -13,8 +13,8 @@ Earthmetric
 Gaps 
 Chronosphere
 
-1.2D-flat research
-　　2.5D、Fanz 2D-3D 时空幻境 2d（revive retrieve） 科隆战纪
+1.Isodec flat research
+　　 Fanz  时空幻境  revive retrieve） 科隆战纪
 　　Rockman megeman
 2.Red Alert
 (1)Warcraft （Network)
