--- a/Rastera/asnic/rastera/health.html
+++ b/Rastera/asnic/rastera/health.html
@@ -11,8 +11,7 @@
 <pre>
 2020/9/1x
     Solid-⊙-Vesaid:串斜音
-
-        Do ruai mi fa so la xi do
+    Do ruai mi fa so la xi do
         Anemo
         aeiou
         一声平二声扬三声拐弯四声降
@@ -52,7 +51,7 @@
     向心力WarCentreAround
 
     维吾尔团结
-       汉民族分散
+    汉民族分散
     犹太民族气铅
     讲:对话课学 成像
     KansaiF:AreDreaming~Alieniate
@@ -98,7 +97,7 @@ Time：9-19
             漏洞.自我善良.一报还一报
         坟墓类型、范围、HxW
             端口?.被谁重复利用
-Ojinsa-Slashed：9-23
+Orgeinsa-Slashed：9-23
     Solid.flat:
         odin.limiting:
             dot.line.metric
@@ -194,7 +193,7 @@ Sex~HardInfo:10-3
         Both.Feeling:First
         Both.Sentimental:Lost
         Both.Emotion:Buried
-&forall;家乐福 yesterday  10-4
+        家乐福 yesterday  10-4
     Arc槽肏不圆 PMP
     Rectflag
     HedgeStart
