--- a/Rastera/asnic/rastera/heuristic.html
+++ b/Rastera/asnic/rastera/heuristic.html
@@ -190,7 +190,7 @@ FrameSleep7：10-26
 4plus endo 20-27
     Muscle:
         belly dick turtle
-Jesus Krstal + 7 PM 12:11 10/28
+Jesus Krystal + 7 PM 12:11 10/28
     主牢烙 方格蚩 ruler 
     牙色忘
 国际招魂 10-29
