--- a/Rastera/asnic/rastera/matrix.html
+++ b/Rastera/asnic/rastera/matrix.html
@@ -42,7 +42,8 @@ No aging
 [定义]人 动 物 意识.形态 
 　　Oldman人马座 T upsidedown 耶稣?.Angelwolf 寂静岭
 
-　　十二生肖是十二地支的形象化代表，即子（鼠）、丑（牛）、寅（虎）、卯（兔）、辰（龙）、巳（蛇）、午（马）、未（羊）、申（猴）、酉（鸡）、戌（狗）、亥（猪）
+　　十二生肖是十二地支的形象化代表，即子（鼠）、丑（牛）、寅（虎）、卯（兔）、辰（龙）
+        巳（蛇）、午（马）、未（羊）、申（猴）、酉（鸡）、戌（狗）、亥（猪）
 　　仙家 植物精
 　　
 　　白羊座、金牛座、双子座、巨蟹座、狮子座、处女座、天秤座、天蝎座、射手座、摩羯座、水瓶座、双鱼座。
@@ -108,9 +109,6 @@ Fusion knock L
 FusionA|思想->物理重力
 Anti-Fusion|物理身躯 -> 不用伯恩感知
 　　OpposumUpsidown Hedge
-
-
-
 负Rat（count(?.*)
 M&m 熊猫 凶吗
 五官谁优先
