--- a/Rastera/asnic/revenge/if.html
+++ b/Rastera/asnic/revenge/if.html
@@ -16,15 +16,16 @@ Veasel	= Weasel(Moongose)Origin Yellow.5f (y) 0.2
 Hedge  = Hedgehog  Source? Fusion True False (qsf) 0.05
 Lat= Rat(Arteagle rateagle) = Origin Fusion memory*(arm) 0.01
 
-Giants
-Gnome
-Summon
-Goblin
-Magician
-Lyken
-Half-Beast 阿修罗
-半人马
-Darkelf
+GeoSprite
+  Giants
+  Gnome
+  Summon
+  Goblin
+  Magician
+  Lyken
+  Half-Beast 阿修罗
+  半人马
+  Darkelf
 
 Transhuman(earth or out spaces aliens)
 Dark enegry
