--- a/Rastera/asnic/serial/persivision.html
+++ b/Rastera/asnic/serial/persivision.html
@@ -89,7 +89,7 @@
 
 闹歪边 曲流拐弯的部分：Vesaid 黄鼠狼 唱歌 音乐
 
-*EarthEnvironment:Pocessed->BeingPushed.Wrapped
+*EarthEnvironment:Pocessed.Geniz.BeingPushed.Wrapped
     文武
         疼type range
         InsideBody EachComplaint
