--- a/Rastera/asnic/revenge/trace.html
+++ b/Rastera/asnic/revenge/trace.html
@@ -58,7 +58,7 @@ FrightenType
 　　Suddenly pop up
 　　What sort of voice like rat、devil、most frighten animals 
 　　Movies Fear 万圣节 
-Odimtional
+Odimetional
 　　Advtisement
 　　GruangGao
 　　Interrupted by what sort of energy 
