--- a/Rastera/asnic/rastera/kine-group.html
+++ b/Rastera/asnic/rastera/kine-group.html
@@ -10,6 +10,7 @@
 今维美.塞希尔
   源素.能
     序列：水 因 金 （光 电 热）土 火 木
+    电 光.晶 泥 汞// Comsek.Research
   波恩.创世纪.诺克斯盾    
     
     关键词：最 忽略(眼妕*平淡无奇*川松)平坦奇趣 创造力 姓蹩 歧视
