sudden drag at room , inner post 银城旅馆

--- a/Rastera/asnic/access-term/phrase.html
+++ b/Rastera/asnic/access-term/phrase.html
@@ -47,6 +47,15 @@
     ?1 山名
 小说 色彩 //TitleShot.FirstAnalytical
 传说
+
+罐墩焖 //Pinyin: Guan Dun men; English:Geodem Dungeon Muffin
+  罐头： 屋子 地皮
+  墩： 牵连 地下 周围
+  焖： 行为习惯优先 老龄分析   
+
+  @ SelfGet.Negative
+井里面
+  
 </pre>
 </body>
 </html>
