--- a/Rastera/asnic/rastera/kine-group.html
+++ b/Rastera/asnic/rastera/kine-group.html
@@ -275,6 +275,9 @@ Kid.Append
 庞德 @Pond
   Hellic.Worship.Around.Pond
   Indo.Sperm.Egg.Pond
+    keywordiz:water.type 
+    //十加毛泥 象重
+    //温青蛙 对比 神陨
   Mind Spring Daylight Color
 
 分列与融合 分裂式水融合
@@ -290,11 +293,13 @@ Kid.Append
   善良解释邪恶:直射善良
   关键点：语言  下毒.历史节点分析
   忘江皿 //Handless
-  //Geniz.Jealous
+  @ Geniz.Jealous
+  中国封建拥抱 
 组群.外部
 
 线粒体 头颅想汇认亲 //DNA
-//Sexcast.place.object.arrange.alignment
+
+
 </pre>
 </body>
 </html>
