--- a/Rastera/asnic/access-term/creal.html
+++ b/Rastera/asnic/access-term/creal.html
@@ -69,23 +69,27 @@ Facial:Vision Auditory Olfactory Voice
 　　A?Gθlst  
 　　八月
 PSI-(Physical Rest Ideological Attack Superficial hid)
-　　
-　　?snic decrease for M?i声东击西 August  Auoglist
-　　近而示之远，远而示之近
-　　PTO	 点面 音意
-　　类似睡非睡 宏观物理一刀切 faults out psi-force-out
-　　Poss?ssed Acm-伊莱克斯 Elaikes Eilikes
-　　
-　　1)星际:物理聚合?核心 （日月 Yy）
-　　
-　　海皇波塞冬 khaos chaos in the air(watched the Lead)
-　　识海
-　　法海
-　　
-　　2)Focusing the discrete energy entertain the  major core 
-　　HΔW to grab
-　　To be displayed
-　　8 to be left or separated
+    地球上的定义 reminder：Creal
+　Physical on EARTH (influence on the other planets)
+　Superficial 伊斯兰教	  Spontaneous
+　Interdisciplinary Ideological 耶稣基督服饰 with P
+　
+　?snic decrease for M?i声东击西 August  Auoglist
+　近而示之远，远而示之近
+　PTO	 点面 音意
+　类似睡非睡 宏观物理一刀切 faults out psi-force-out
+　Poss?ssed Acm-伊莱克斯 Elaikes Eilikes
+　
+　1)星际:物理聚合?核心 （日月 Yy）
+　
+　海皇波塞冬 khaos chaos in the air(watched the Lead)
+　识海
+　法海
+　
+　2)Focusing the discrete energy entertain the  major core 
+　HΔW to grab
+　To be displayed
+　8 to be left or separated
 　　
 ?♀Blessing
 　　Dynamic hand mov?ment gesture
@@ -101,6 +105,13 @@ Event:
 
 　　??Ψ
 
+　　
+Creal:reminder?.first
+　　Creal-fusion:irection
+　　Creal-this or that NIC
+　　Tetris =Transblink listenθsudden Sense Shout
+　　Letwesto Look hear taste smell talk
+　　
 </pre>
 <div id="compiler">
     <div id="console"></div>
