--- a/Rastera/asnic/access-term/phrase.html
+++ b/Rastera/asnic/access-term/phrase.html
@@ -21,30 +21,31 @@
   Vesaid?=挂面slip of Vesaid!~ zelda 猪?.服务 人学习
 
   被套洋捞
-　　  Cause
-　　  AEfects by whom
-  归类定义H-Π-W Terminology
+    Smoke.Analytical.Offset
+    Cause
+    AEfects by whom
+
   超时空传送 chronosphere
 　　  Vesaid~ Wesaid Shout Out CrealR~Solid
 　　  Semi-Conduct(is dirty = true)
 　　  //Cymtical Symte? 赛门铁克
 　　  isDirty=宗叫|党派|真|假|是|否
-  chronosphere
+    
   Aniduration Anicest(bug) transhuman ketself ?
 　　  Anidura balance for 疯阳硼※
 
-歌德：Gede
+歌德 //Gede
   ThransLect.TranizRanket
     Name.JkRowking
     Geographic.Manchester.Baidu:County^//~郡:因果.忠动(祸澈).冬房(重锅)
     Nick 
     Elante 
-    Rhrea //era 纪年 公元
+    Rhrea Ruiya  //era 纪年 公元
     Wumi
 
 神话 反射 
   不会偏人的源素
-    ?1 山名
+      山名?
 小说 色彩 //TitleShot.FirstAnalytical
 传说
 
@@ -55,7 +56,7 @@
 
   @ SelfGet.Negative
 井里面
-  
+
 </pre>
 </body>
 </html>
