--- a/Rastera/asnic/access-term/possess.html
+++ b/Rastera/asnic/access-term/possess.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 <pre>
-附体.方针.对接
+附属.附体.方针.对接
   课中机
   科狼嗬
   拉稀氏
@@ -21,6 +21,8 @@
   汪阵鱼 淋阵妥套
   亡胎锅 
   沃特森 //Watson
+  闹够套索
+  西子.受流丹
 结束.术语.节点
 
 维金术语
@@ -31,6 +33,7 @@
     抽完烟以后忘记过程中的点 //Analytical.Offset
     重要问题可能流失
   让黄煌 //明晃晃 削
+
 Hligaokter
   henCEnzic kanSzidor CallJuarez
   henchunzic kanzidor callhorjie
@@ -47,7 +50,6 @@ Hligaokter
     不是去上
   干扰类型
     欧利克
-
 结界.结束
 </pre>
 </body>
