--- a/Rastera/asnic/access-term/term.html
+++ b/Rastera/asnic/access-term/term.html
@@ -11,69 +11,63 @@
 <body>
 <pre id="">
 
-克鲁兹 //heuristic.html Kause 
-  Because:maked made loved
+克鲁兹 .群组
+  heuristic.html  
   KauseBeinged: difference between sex,sexcast, cykaest ?to Camery Symerey
   Kross:Crossed related to
   Klause:Some real deal happened
   Kause:be dic cause Clothes
+  Because:maked made loved
 
-　　Religious(T|F)
-　　Party (Y|N)
-　　Myth(Solid.SymbolFirst)
-　　Hospital 
-　　
-　　Soft min tiny YY 
-　　Anidura balance
-　　Cexcast?.bar?.嵌套式
-　　
-
-硬物理 动态性定义 不伤感情
-  参照 [MFS]维金美-Arrange and Beauty.docx
-  trannshuman 
-  气人
-
+    Religious(T|F)
+    Party (Y|N)
+    Myth(Solid.SymbolFirst)
+    Hospital 
+    
+    Soft min tiny YY 
+    Anidura balance
+    Cexcast?.bar?.嵌套式
 HΔW(M&m 宏观和微观 HΦW VesaidΔSolid Focused）
-
-　　地球自传与公转 π 的校正与其他星球的关系
-　　倒转|wjcking.rotate
-　　动态文字 方向 动态发音
-　　Where What when?
-　　Which （for fuck from language to program）
-　　I = In~div-i.?.dual 我 substance rate balance lever 爱 a
-　　Who  Whom Whose? 
-　　why How
-　　
-　　Sur|real Creal ?real
-　　Where = 哪里 the 地点 W-here
-　　Why = 为什么 Asnic range-in(short) 能量感知微（维）牵引
-　　What = 什么、怎么了 感叹 微粒子 Asnic RangeIn 硬微（维）牵引
-　　When= SnicTime Wave Line 但是并没有发生（why △ 还没到点上）
-　　Time = 有使命的意思，绵延性到点?.跟其他星球联动到?.点（what happen △ cur ed ing being）
-　　
-　　纯地球 过去 现在 未来 
-　　Passθsense(Pythons ed be ing)  present future
-　　Past now will
-　　Was（were） being W ill is going to　
+  地球自传与公转 π 的校正与其他星球的关系
+  倒转|wjcking.rotate
+  动态文字 方向 动态发音
+  Where What when?
+  Which （for fuck from language to program）
+  I = In~div-i.?.dual 我 substance rate balance lever 爱 a
+  Who  Whom Whose? 
+  why How
+  
+  Sur|real Creal ?real
+  Where = 哪里 the 地点 W-here
+  Why = 为什么 Asnic range-in(short) 能量感知微（维）牵引
+  What = 什么、怎么了 感叹 微粒子 Asnic RangeIn 硬微（维）牵引
+  When= SnicTime Wave Line 但是并没有发生（why △ 还没到点上）
+  Time = 有使命的意思，绵延性到点?.跟其他星球联动到?.点（what happen △ cur ed ing being）
+  
+  纯地球 过去 现在 未来 
+  Passθsense(Pythons ed be ing)  present future
+  Past now will
+  Was（were） being W ill is going to　
 
 SOS	
 	Sprite Of Snake
 	Save Our Souls
 	Save Our Ship
-		E.g.The lost of Titanic
+		Eg.The lost of Titanic
 　　		Source Origin Start
 AOP	
 　　Ancestor Offspring Predator(Predecessors)
-　　百家姓
-AOR
-AOE
+　　家姓百
+  AOR Arrivals.Rirval
+  AOE Enemy
+  COF Coreget Followers
 TOP
 　　Time Odimentional Physical
 　　PTO	 (Physical 硬物理）点面 音意
 　　POT
 　　PBC
 　　?Fphysical Biological ?hemical
-Ket:Get
+Ketself.Ket:Get
   Kaetseof(dynamic?.H.W)　
     K vos aoz G
     Ketself=  Jeokravitational Sentimental Emotion  Fusion CGSEF
@@ -104,21 +98,13 @@ Ket:Get
 　　Earth ⊕比率 
 　　Creal -⊕- 起世录（从神话走向真实的过程 复仇与获得）
 　　Other planet
-Set.Self
+  硬物理 动态性定义 不伤感情
+  参照 [MFS]维金美-Arrange and Beauty.docx 
+SelfKet
 
-PSI 地球上的定义 reminder：Creal
-　　Physical on EARTH (influence on the other planets)
-　　Superficial 伊斯兰教	  Spontaneous
-　　Interdisciplinary Ideological 耶稣基督服饰 with P
-　　
-Creal:reminder?.first
-　　Creal-fusion:irection
-　　Creal-this or that NIC
-　　Tetris =Transblink listenθsudden Sense Shout
-　　Letwesto Look hear taste smell talk
-　　
+
 Solid	(shape index on earth Anti- ）
-　　Auote
+　　Eyden Tyrant //钲坊 铯角
 　　SymbolShapeBeauty以人为本（准） 以美为准（本） 阿萨尼亚克维标杆
 　　Solid-Out-Anti-shapetype
 　　Solid-Out-Fusion-?
@@ -131,10 +117,10 @@ Solid	(shape index on earth Anti- ）
 　　　　Solid PTO line
 　　　　Solid POT sine
 　　　　
-　　Circle Cross Intersect
+　　\\Autobein.Declassify:Circle Cross Intersect
 　　Sphere square 
 　　主要和Vesaid区别就是 voice
-KansaiF (是否看见维标准facial and other kingcell(body) part)
+Kansai-F (是否看见维标准facial and other kingcell(body) part)
 　　Switch
 　　Case hxw kingcell part
 　　Kolorful //形状不知道一闪而过颜色，
@@ -146,33 +132,32 @@ KansaiF (是否看见维标准facial and other kingcell(body) part)
 　　　[倾向于Solid]耳朵能听的到的眼睛也能看到
 　　　
 　　　？.能否看见味道 听 嗅 出现错综形状 不符合Solid 的绝对标准
-　　　
-Vesaid (Vesaim~)物理解释 区别于 ?赛瑞尔
-　　Voice Symbolic Dimension  Shape  Rigid Body （刚体）
-　　Individuate Beauty Benchmark //声 美
-　　Cenery 分析
-　　W?said  W?sait
-　　?real Voice
-　　PSI Voice
-　　Direction
-　　
-    Vesaid OPT line
-    Vesaid POT sine
-    Vesaid PTO line
-    Vesaid POT sine
-KansaiF
     ?snic Эya Ism 14	
 　　    when?snic	
 　　    ?snic
 	    Minmax tinywhat 参照 docx
+　　　
+Vesaid (Vesaim~)物理解释 区别于 ?赛瑞尔
+  Voice Symbolic Dimension  Shape  Rigid Body （刚体）
+  Vezaid:Sonic.Fast
+  Individuate Beauty Benchmark //声 美
+ 
+  ?real Voice
+  PSI Voice
+  Direction
+   Vesaid OPT line
+    Vesaid POT sine
+    Vesaid PTO line
+    Vesaid POT sine
 AEFects
 　　Kapa(s)
 　　Hedge?Opposum
 　　Panda?psi or 
-EvenSquare	
-OnceAlways	
+Vesaid.ShotTerm
+  EvenSquare	
+  OnceAlways	
+  Restera.Solid.Html
 
-AJAX Codex
 </pre>
 
         <div id="compiler">
