--- a/Rastera/asnic/rastera/slepting.html
+++ b/Rastera/asnic/rastera/slepting.html
@@ -72,8 +72,6 @@
 		 
 回溯:莱昂尼克
 
-
-
 Ceovate.GeoSprite?:ZeusHerde.Scalewater
   WaterScrew //女娃 回水 曽金癞
   Rhea.Aatelist.LikeMost:
@@ -114,7 +112,7 @@ Ceovate.GeoSprite?:ZeusHerde.Scalewater
     Casualty.Rollback
 
     Leonic.Source.Wjcking.Acknowledge.GroupStruggle.Language:
-      Roman Hellik Persition
+      Roman Hellac Persition
     Ionic.Origin.InstantTransed
   WaterBoolean:EvalBlance
   LikeFirst
@@ -123,7 +121,7 @@ GeoScript.GeoGraphic.Besided
 
 因缘：爱昂尼克:阿芙洛狄特 维赛德.阿狄丽娜 //Lines:75s
   Absock.Dimond //Αγάπη
-  	Latinie.amor:English.sheild: //盾牌 耕田 打仗提戈 我 自己干自己 
+  	Latinie.mor:English.sheild: //盾牌 耕田 打仗提戈 我 自己干自己 
 		  Maria L Venus
 		        M
 		        W
