--- a/Rastera/asnic/rastera/solid.html
+++ b/Rastera/asnic/rastera/solid.html
@@ -10,7 +10,7 @@
 
 参照￠31 2020-7-25 Treeday AniPlace
 
-?HΔ□W 
+HΔW 
 　　□added 物理洋捞 三角形就行 mind the other Vesaid-Shape,
 　　kappa~不to美 
 　　For shapes
@@ -22,7 +22,7 @@
 参照 POSE .docx
 　　树精?.植物神经紊乱
 
-Gall Bladder   <- Geographic Gravity Position 
+Gall Bladder:Geographic Gravity Position 
 　　n.	鲁莽; 厚颜无耻; 怨恨; 怨愤; 瘿，虫瘿(植物因受病原刺激或虫害而出现的局部增生);
 　　v.	使烦恼，使愤怒(尤指因不公平引起);
 　　
@@ -32,7 +32,7 @@ Gall Bladder   <- Geographic Gravity Position
 Body U Fan Another Shapes 
 　　Feeling first then body part last 
 　　头
-　　折平衡 <G-all Bladder> Meisai
+　　折平衡  G-all Bladder  Meisai
 　　腿
 　　右
 　　西方树精
@@ -72,7 +72,7 @@ Voice Surplus(as index|伊莱克斯）
 　　Rigid body 
 　　维赛得 ?said or Vsaid Δsaid -> → 
 　　Vesaid 好看但是~
-　　Triangle <三~sai(塞得维尔) 角>
+　　Triangle 
 　　物理
 　　Δsaid(维塞得 | 塞得维尔）
 　　 歌德 物理拍马屁 
