--- a/Rastera/asnic/access-term/kazidor.html
+++ b/Rastera/asnic/access-term/kazidor.html
@@ -1,16 +1,22 @@
 ﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-    <title></title>
+    <title>卡塞尔多</title>
 </head>
 <body>
 <pre>
-难干：辐射
-赛卡斯特.瑟雷姒多
-  群组 
+伽马.难干：辐射
+赛卡斯特
+  群组 瑟雷姒多 公众
 
-
-卡塞尔多.赛卡斯特:罗塞塔,？
+贝塞斯达:黑曜石
+  @SeofuulKaet.Expleasure //Ketself
+  @ Different.Rosetta 
+  塞克斯 美克 维赛亚纳 汉德
+赛卡斯特
+  罗塞塔.,贝塞斯达
+塞克斯
+  .罗塞塔,？贝塞斯达
 </pre>
 </body>
 </html>
