--- a/Rastera/asnic/access-term/term.html
+++ b/Rastera/asnic/access-term/term.html
@@ -153,7 +153,7 @@ AEFects
 　　Kapa(s)
 　　Hedge?Opposum
 　　Panda?psi or 
-Vesaid.ShotTerm
+Generical.ShotTerm 
   EvenSquare	
   OnceAlways	
   Restera.Solid.Html
