--- a/Rastera/asnic/access-term/kazidor.html
+++ b/Rastera/asnic/access-term/kazidor.html
@@ -10,7 +10,7 @@
   群组 瑟雷姒多 公众
 
 贝塞斯达:黑曜石
-  @SeofuulKaet.Expleasure //Ketself
+  @SeofulKaet.Expleasure //Ketself
   @ Different.Rosetta 
   塞克斯 美克 维赛亚纳 汉德
 赛卡斯特
