--- a/Rastera/asnic/rastera/developer.html
+++ b/Rastera/asnic/rastera/developer.html
@@ -72,6 +72,7 @@ Counter-Strike.Procedure
   桥步斯.屏锅.飞机.成酒肝：莱特兄弟 //蕊氩艾忑 WR Warner Wright Brother:Brew.Symbian
 
    速怨 一张专利聚会
+    头圆 身方 Bell:LL GEO 11
    回隆 电脑爱好者
 溯源.美国
 
