--- a/Rastera/asnic/rastera/fragment.html
+++ b/Rastera/asnic/rastera/fragment.html
@@ -17,10 +17,10 @@ adj.	爱好; 喜欢; 迷恋，倾心(于某人);
 意境
 artistic conception;?prospect;
 
-Sexcast.place.object.arrange.alignment
-Nymph.Fallout.Queue.Persian-Turk.Language.Diamond.UnderWave
-LegShake.BeingCoreget.Alieniate.Power.FlySaurce
-
+@ Sexcast.place.object.arrange.alignment
+@ Nymph.Fallout.Queue.Persian-Turk.Language.Diamond.UnderWave
+@ LegShake.BeingCoreget.Alieniate.Power.FlySaurce
+@ IndiaNose:Fallout.TrushPick
 洒
   污漫舱：搭救.膀邪.衡.波纹水平
 酒
@@ -30,3 +30,24 @@ LegShake.BeingCoreget.Alieniate.Power.FlySaurce
   绘画：莲花 绿色 莲藕 孔雀羽毛点缀 夕脏语
 青蛙 花仙子 贴面
   @ Sperm forg Torde
+
+@wjcking.teleivsion.moive
+  Blind.Collector and Audience.Sympathetic
+  WhatIf.Truth.Happpen
+  KidCultivate KidFan //爱在旅途
+  //清朝地下遗产 气铅与投胎
+舞蹈与笑柄 
+  排练跳舞与观看 
+  民族性质 眼神 想法
+中东战争 羊眼睛
+  南.十门羊 什么东西
+@Trap and Dirt with Spotter Frames
+  //李婧妍 宿舍 父亲 被子 事件
+身体与地理
+  毛泽东 攻击 虫子 沾朴
+  日本刀 井夜 字拱 中国
+  下体与叶子 //HymanKolour Renlay.Uterus.Iyfreak
+@A merican wisp of hair 
+    yellow butterfly
+温青蛙
+  安葬 祭祀朝拜 
