--- a/Rastera/asnic/rastera/kine-group.html
+++ b/Rastera/asnic/rastera/kine-group.html
@@ -290,7 +290,10 @@ Kid.Append
 臀派 //PI 3.14 Butt Hip AirLead
 
 群组.内部
-  天启与附体
+  天启与附体和上地
+    认知与捍卫
+    个人生命与后代延续
+    @ CoreGet.OffSpring.MayLost
   善良解释邪恶:直射善良
   关键点：语言  下毒.历史节点分析
   忘江皿 //Handless
