--- a/Rastera/asnic/access-term/phrase.html
+++ b/Rastera/asnic/access-term/phrase.html
@@ -57,6 +57,10 @@
   @ SelfGet.Negative
 井里面
 
+@Jeopardize Geopernise
+  Besesida.Explease
+    Collectively
+    Individually
 </pre>
 </body>
 </html>
