--- a/Rastera/asnic/rastera/slept-offsive.html
+++ b/Rastera/asnic/rastera/slept-offsive.html
@@ -76,6 +76,8 @@ Linux.HandHead
   Ancient.Skull
   
   Half-Life.Body
+    Tasty Cut^e Throat in Stomach //味断仇肠
+      Indigestion and Atmosphere
     hlygaokter //testis
     hormone //东方人不一样
 Liuix.HighHeel
