--- a/Rastera/asnic/serial/persivision.html
+++ b/Rastera/asnic/serial/persivision.html
@@ -245,6 +245,12 @@ Definition:PointBack.RangeFirst
   //人.看不见.洛克没跟
   //性癔.借体
 溯源.解释
+
+Sperm & Game
+  The way of Calling 
+  The method of Coreget
+  Egg more underground with Fusionally?
+  //人参果 下水道
   </pre>
 
 
