--- a/Rastera/asnic/arrange-beauty/rockmega.html
+++ b/Rastera/asnic/arrange-beauty/rockmega.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <title></title>
     <pre>
-CFD地球上来说皮肤细胞 洛克梅根与人的不同 
+地球上来说皮肤细胞 洛克梅根与人的不同 
     RΣ 维赛亚娜中的洛克梅根 
     The substance  Asniyac between 真人 过渡人
     Grand Solid Sentimental Event with absolute emotion
