--- a/Rastera/asnic/rastera/developer.html
+++ b/Rastera/asnic/rastera/developer.html
@@ -42,8 +42,9 @@ Half-Life:Function
           Vzd:Vsd.Sonic.Sound:Vezaid
         Vsd:737~747:Vzd 
           cs_militia.militry
+          Zeus Seviltin 1^7 Axis.TopRight //索来德.长方形[十七]
         Vesaid.Roune:Vezaid.Wrong//半条命.拉姆达:熔入 融人 
-      Wjcking.Childhood.ComicBook.DonaldDuck //吝啬鬼    
+      Wjcking.Childhood.ComicBook.DonaldDuck //吝啬鬼 柒铅 
 
 
   Microsoft.Net.Framework 1.1 //delyix.html
