--- a/Rastera/asnic/rastera/rast.html
+++ b/Rastera/asnic/rastera/rast.html
@@ -39,7 +39,8 @@
   bottom low middle high head&hand off bone Sos white-partial
   bottom low middle high DotEarth Communicate Geo.Interface(Ltsz.Pillar)
   bottom low middle high slept-offend
-  bottom low middle high Paest Tenze Aysak Issac
+    bottom low middle high Paest Tenze 
+  bottom low middle high Aysak Issac
 开始Rast
 
 Napoléon Bonaparte 贵格派 Quicker Quicker
