--- a/Rastera/asnic/rastera/transcolor.html
+++ b/Rastera/asnic/rastera/transcolor.html
@@ -48,7 +48,7 @@
         Ladder
         EclipseLadder
         Arcside
-    3d wall for buiding by using flexible material
+    3d wall for building by using flexible material
         kansai communication
         sexcast
         exhaust thinking
