--- a/Rastera/asnic/revenge/playweight.html
+++ b/Rastera/asnic/revenge/playweight.html
@@ -5,9 +5,8 @@
     <title>[经验]细节-类型-题材</title>
 </head>
 <body>
-<textarea>
-
-剧Script
+<pre>
+剧变 GeoScript
 
 Anti-Adv-characteristic 
 　　四大名著   荷马史诗 奥德赛 一千零一夜
@@ -74,6 +73,6 @@ Yin yang Ats cup（方向夹角 弧度） gaps 出去的快进来的慢 || Anoth
 Dice：疑 审视
 剪鱼中 当有 其他 action 疼痛
 
-</textarea>
+</pre>
 </body>
 </html>
