--- a/Rastera/asnic/vesaier/mime.html
+++ b/Rastera/asnic/vesaier/mime.html
@@ -20,7 +20,7 @@
 李阳 忍靓
 　　孙亚杰
 ▽ZeusIndexesPotionType
-◆<Gendering.老公 丈夫 爱人 Ketself? P.Govern&R&M>霓虹婷
+◆Gendering.老公 丈夫 爱人 Ketself? P.Govern&R&M霓虹婷
 　　
 孙建强
 　　傻痒Dell帝
@@ -32,12 +32,12 @@
 　　政治三国白色4猫铅酸氖
 　　 奶妓 白色 洗澡盆《又鸟8色夕己》白颜whitecylinder-round~triangle
 赵玉琪 氺水星际在宇宙上面骑着
-　　数学 活腻围魏静文尔 舔Jj 4ceng（家Solid->屋里形状丁策锁）
+　　数学 活腻围魏静文尔 舔Jj 4ceng（家Solid 屋里形状丁策锁）
 徐艳杰
 　　怨盒宋 拉姆达 入
 　　背景税率狄(concrete) 爱慕屁3洒 管freeman 
-康华宁< 叁怨撬 QM<余|割>潇涵数?.tonget cos 磁欧石破坏源起节点
-　　Dispose：瓜 刀奈特.net 妹油<子典 Generic.Collection.Dic<S§佘>tionary>
+康华宁< 叁怨撬 QM 余|割 潇涵数?.tonget cos 磁欧石破坏源起节点
+　　Dispose：瓜 刀奈特.net 妹油 子典 Generic.Collection.Dic S§佘 tionary 
 　　Knuckle   joint juncture Sitlandia勃起挺美的
 　　Nunchakus 
 
