--- a/Analytical/analytical/asnic/leonic.html
+++ b/Analytical/analytical/asnic/leonic.html
@@ -53,7 +53,8 @@ Maticals //空间平面立体总分类叫法
     //Defintion.Axis.SideFirst:三个边完全相等 = Earth 60 degree
 Solid 
     Tryant
-    Frant // Franket  Front Radical Fonc~Square 正方形Rectan
+    Eident
+      Frant // Franket  Front Radical Fonc~Square 正方形Rectan
         Rectan
 Circle 
     Isoc.Sequal(RenliyFirst).Leadito.Ionic
