--- a/Analytical/analytical/asnic/leonic.html
+++ b/Analytical/analytical/asnic/leonic.html
@@ -5,13 +5,9 @@
     <meta charset="utf-8" />
     <title></title>
 </head>
-<style type="text/css">
- 
-  </style>
+
 <body>
-
-    <pre id="circle">
-
+<pre id="circle">
 Leon.Start 
     Source 
     Orgin
@@ -63,6 +59,10 @@ Maticals.Flat.Start.Intelligent.intel.html.line:31s
         
     Renliy.VisionSolid:Axis.Anaytical.Dot.Line.Angles&ReferedObjects
     Isoc isock Isoic
+      Coordinates & Balance
+      kater.diamond:x y
+      rect:h v 
+      hexagon: x y h v
     Isonic      
     Isodec isodek 
     isometric 
