--- a/Rastera/asnic/rastera/fragment.html
+++ b/Rastera/asnic/rastera/fragment.html
@@ -5,17 +5,17 @@
 眉毛新月弯又像菩萨的女人，披着白色
 秃头眼睛很邪，但是很孤单的妖精？秃头
 
-Yaxiyani Niyaxiya
-
-Euphemistic mild and roundabout;?tactful 圆通的;?euphemistic;
-密集恐惧症
-trypophobia 
-
-enamoured	英[??n?m?d]	美[??n?m?rd]
-adj.	爱好; 喜欢; 迷恋，倾心(于某人);
+翻译
+  Yaxiyani Niyaxiya
+  Euphemistic mild and roundabout;?tactful 圆通的;?euphemistic;
+  密集恐惧症
+  trypophobia 
+  enamoured	英[??n?m?d]	美[??n?m?rd]
+  adj.	爱好; 喜欢; 迷恋，倾心(于某人);
 	
-意境
-artistic conception;?prospect;
+  意境
+  artistic conception;?prospect;
+结束
 
 @ Sexcast.place.object.arrange.alignment
 @ Nymph.Fallout.Queue.Persian-Turk.Language.Diamond.UnderWave
@@ -24,6 +24,10 @@ artistic conception;?prospect;
 @ Steer.Offset.Standout.Lost
 @ Leonic.Language.Atoz.Nunderground
 @ bath.with.mother.essay
+@ Saykast.LoveMake.Accompany
+  Group.Culture
+  GroupAid Pleasure 
+   Event.Stab.Coreget
   //脏阴囊 朋克 Hit Ear the
   
   
