--- a/Rastera/asnic/vesaier/revenez.html
+++ b/Rastera/asnic/vesaier/revenez.html
@@ -25,6 +25,7 @@
     Arrange Lz: 东北 北京 被干
     Opposite anger range Then
     regrouped opposites 气到位 鸿门宴 then
+    带话给谁 同学 亲戚 朋友
 圣女贞德Gendering◆
     //良 压着?.B比看到落体钕妊耿好
     ?1色即是空
