--- a/Rastera/asnic/rastera/developer.html
+++ b/Rastera/asnic/rastera/developer.html
@@ -35,7 +35,9 @@ Half-Life:Function
       American.HumanSpirte.Personals:
         Aeroplane.ShapeFirst.Wing.boeing747.NumberSimilar:101 141
         Boer~ing.GoldenPeacock.GrudgeMean's GreenCar//和波长 波音 美国人魂 
-        "Plane".Utlimate.Cautious.Translated:Flat,Plain //平面
+        *"Plane".Utlimate.Cautious.Translated:"Flat,Plain" //平面
+          Unicode:Universal Character Set //铀ISO制定  通用字符集 
+          Universal.Source:Uranus Uranium
       Zero:Figure.Finger 
         You.Trylize //Radio Trace Active     
         0x1:Zerone //Stack Stuck Kolor Kontrol Ultra Violate Sound Love
