乾元 立交桥 氨喇叭 索克 头 凯特尔

--- a/Analytical/analytical/Leonic/trikon.html
+++ b/Analytical/analytical/Leonic/trikon.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <pre>
-Transparent<-Range->Dis-opaque
+Transparent<-Range->Dis-opaque.Nopaque
 Leonic.Trangle.Trikon.Tricylce
      Intelligent:Trikon.ReachedAgreement:
         1.OnlySocalledFeeled
