--- a/Analytical/analytical/func/permutation.html
+++ b/Analytical/analytical/func/permutation.html
@@ -129,7 +129,7 @@ Leon.Loop
         var leonics =
             [
                 [
-                    "Cobra",
+                    "Cybert",
                     "Axis",
                     "Maticals",
                     "Solid",
