fallout 变形金刚 院子 鑫 浩廿 国 z 挡 头

--- a/Analytical/analytical/advent.html
+++ b/Analytical/analytical/advent.html
@@ -6,8 +6,8 @@
 
 Analytical
     live being towards        
-        Developer = 0,
-        User = 1
+       Advent Developer = 0,
+       Anyuser User = 1
     Career
 
 Prioity
