--- a/Analytical/analytical/anyiket.html
+++ b/Analytical/analytical/anyiket.html
@@ -12,7 +12,7 @@ Cyber
     Connector
     Bracket
     
-Lasik 
+Lasik:Single.~Group
     Letter
     Symbol
     Word    
@@ -22,7 +22,7 @@ Preditor
     Line Pine Bine Ketub
     Row~s Col^s  Rowlet 
 
-Language
+Language dcibt
     mouth-speak  hand-write  body-guesture eye-contact mouth-movement nose-dragout
 Word
     Stick Stack Stabled Colored    
