--- a/Rastera/asnic/vesaier/revenez.html
+++ b/Rastera/asnic/vesaier/revenez.html
@@ -96,6 +96,7 @@ Telephoniz
 Panic&Threat
     ContrictSoundies 第一次刷棋 Underball-Neverforget 
     DIgdug panic rate threat
+    Turkish Video Show
 柯纳米方式/^Konami /
     俄罗斯方块 关口 
 
