--- a/Analytical/analytical/Leonic/frant.html
+++ b/Analytical/analytical/Leonic/frant.html
@@ -32,6 +32,28 @@ HalfLife:Rectangle.Side.Half△λThrid
 Inside.Diamond:Rotate|Lonic|Fusion
 Outside.Half&Triangle
 Accuracy:In-Out-KolorStand:Leon.Mfs.M.ReachAgreement
+
+面钫和体积 测量与面基 Areakute Andoline
+单//sin san
+多//odd
+面切配合连点
+正方量对比边长乘 
+Frant.Accuercy.AreaKute.Count:4
+  Directive.Moveout
+   Axis.Rotate
+Leonic.Intelligent.ReachedAgreement:
+  San:Frant.Franket
+  Odd:LeftSide.MoveTo.RightSide.Doubled
+    Apisoda.Rectand
+ Utilized.Rectand.FrantCount2.Measure.Rectangle
+Shrinp.Andoline.Tricon.ReachSide
+Renliy.BodyPart
+  EyeVision.FitinLeast&Evaluate.Utilize.FrantCount
+  Handicap.Blind.HandTouch
+  Handicap.Feet.Utilize
+Reached.?WaterRoune
+
+
 </pre>
 </body>
 </html>
