l-7 fond self bein Xoumen

--- a/Analytical/analytical/advent.html
+++ b/Analytical/analytical/advent.html
@@ -78,13 +78,17 @@ Intrigued to Interest 性趣
         绘画：素描、水彩、国画；舞蹈：爵士、街舞、嘻哈、拉丁、 探戈 ；
         影视：动漫、电影、韩剧、戏剧；口才：朗诵、主持、竞选、演讲、辩论；
   
-        社交：上网、聊天、聚会；阅读：读书、读报、看小说;美食：品尝、烹饪;
+        社交：上网、聊天、聚会；
+        阅读：读书、读报、看小说;
+        美食：品尝、烹饪;
         旅游：国内旅游、国外旅游、长途旅游、短途旅游;
         音乐：流行的、古典的、摇滚的、轻音乐的;
-        饮茶：绿茶、红茶、乌龙茶、沱茶;影视：电影、连续剧、短剧、戏剧;
+        饮茶：绿茶、红茶、乌龙茶、沱茶;影视：
+        电影、连续剧、短剧、戏剧;
         书籍：文学、哲学、经济、政治;户外：攀岩、探险、露营；
       
-        宠物：养花、养猫、养狗；冒险：攀岩、探险、露营；
+        宠物：养花、养猫、养狗；
+        冒险：攀岩、探险、露营；
       
  
         IsBelongCareer
