--- a/Rastera/asnic/rastera/kine-group.html
+++ b/Rastera/asnic/rastera/kine-group.html
@@ -204,12 +204,13 @@ Kid.Append
   人类角度.极端分析:绝断离 绝对断开：仅仅一次
 莱昂: 索莱得:钲坊,铯角 //正方 绝对三角 Trikon 
 尼克:  艾昂尼克 水细胞  纯固体
-  纯固体.地球.硬度优先 
+  动 艾昂尼克 铯
 艾昂尼克:词类:铯:磁性
   动铯名：容入 立方水固定式 瑞博尔
     *不动解释量：地球 宇宙 其他星球 牵引式纯固体 ，不牵引式纯固体 
     *不动.人类角度.弘观优先.例子:身体站立
     地球与外星球.纯固定素不能形容自己
+    纯固体.地球.硬度优先 
       
     形颜 //^Trikon    
   名铯动
