--- a/Autodesk/desk/pixels.html
+++ b/Autodesk/desk/pixels.html
@@ -12,25 +12,9 @@ Renliy.Analytick.HeadBrain.Movabilizing
     KidBaby
       BrithGiving.Analytical.HeadFirst
       Standon
-    Gayakot:Renlay.Earth.CoreForm
+    Gaya:Renlay.Myth.Defined:Earth.CoreForm
       Centeral life style
 Renlie.Bright.Visualize.HeadlPart
-
-Renliy.Aboriginal.EyeVision.OpenFront
-  BrainRotate //Of AAF Analytick.HardLeft.ArmHand
-  EyeOpen.Front.CheckRound.BodyHeat.Coreget
-  Earth.CoreSpining
-  Self.Koreget.Intrigue.CheckBody.ArmHand.FingerCount
-    Carve:Number
-    Substance:Stone,Bone
-  Solid.Group.ReachedAgreement.kutrual
-    Fond:Analysized.HandCraft.CarveObject:Wood,Stone,Bone
-    Tryant:Feet.Angel
-  *HardPoint.Earth.Solid.Outcome~Acknowledged.Globally
-    Sequence Utility
-
-Leonic:Ionic-Motional~Tricon
-Renlie:Fixed.Movable^Colour
 
 Renlie.HumanBeing.HeadPart.Utilize
  Facial
@@ -50,7 +34,24 @@ Renlie.HumanBeing.HeadPart.Utilize
  Hair:Identical
     Kolor
     Curl
-Renliy.Dcibt.Comsek
+Renliy.Dcibt.Comsek.EyeVision.First
+
+Renliy.Aboriginal.EyeVision.OpenFront
+  BrainRotate //Of AAF Analytick.HardLeft.ArmHand
+  EyeOpen.Front.CheckRound.BodyHeat.Coreget
+  Earth.CoreSpining
+  Self.Koreget.Intrigue.CheckBody.ArmHand.FingerCount
+    Carve:Number
+    Substance:Stone,Bone
+  Solid.Group.ReachedAgreement.kutrual
+    Fond:Analysized.HandCraft.CarveObject:Wood,Stone,Bone
+    Tryant:Feet.Angel
+  *HardPoint.Earth.Solid.Outcome~Acknowledged.Globally
+    Sequence Utility
+
+Leonic:Ionic-Motional~Tricon
+Renlie:Fixed.Movable^Colour
+
 
 Renliy.History.Earth
   WaterLight
@@ -80,15 +81,16 @@ Renliy.History.Earth
   Renlie.HandFirst.StoreMatters:
    Stone
    Bone
-    Paper
-    Dcibt.Hardisk
+   Paper
+   Dcibt.Hardisk
 Recorded
 
-Ionic.Particle-Kolour:Pined,NeedleTop
+Ionic.Particle-Kolour:Pined,NeedleNailed
+  Pint Pined
   Pinc.Bein:Pi:3.14
   Pink.Wrappered:Water 
   Pinket.Earth.Being
-BeinchMark:Vector Lector Director: *Scalar:Being
+BenchMark:Vector Lector Director: *Scalar:Being
   Solid.BeinUtilize:ScreenPixel
 Quadual.Waterlized:Vertical Horizontal 
   Coreket.Spinen
@@ -106,7 +108,31 @@ Kolour^Piniket:Paint,Carve//  特质
   Number.Arcline:1 2 3 4 5 6 7 8 9 
 Kount  //读数
   Number:1 2 3 4
-  Number.Count: llll //4 four 四 
+  Number.Count: llll //个：四 4 叫法：four  
+    GlobalHabit.VerticalFirst:FastComfort
+  Number.Markit:
+    Finger.Keyboard:Vertical:Up Down 
+    Left Right       
+    Hand.Mouse.Shake:Horizontal:Left Right
+    HandTwist-FingerHold.WritePaper:
+    Benchmark.Center.ColorHeart
+    GlobalHabit:AngleOdd:Interact
+      Vertical:Start1
+      Angel^Ark~Corner 2 3 6 7 9 
+        @ 手刚转弯 角出
+        @ 手转到一个大湾 弧度
+        @ 一笔到头
+       Start:AngleOdd.Axis.ConnectInterfact
+        Number0:Interfacing
+        Number8:Intersecting Interfacing
+        HandWrite.Casual.NearlyInterfacing
+       End
+      Horizontal:LeftRight-1
+      KeyGuncture:
+        Hand.Knocle:artifice; finesse; stratagem;
+        Hand.?Joint.Twist
+          SecondMovement:4 5 //手气来抬笔
+          Substance:Paper,Keyboard
   Number.Symbol.Aggreed.Ericket.Numeric
   Numeric:l ll lll llll
     Numeric.Lector:- -- --- ----
