--- a/Autodesk/desk/pixels.html
+++ b/Autodesk/desk/pixels.html
@@ -149,10 +149,35 @@ Single~Globe
     Renliy.BenchMark.Intersect -l- +
   Number:Fondant Rectent
     ionic.count.wrappered:numeric:single globe
-    hex:0x1 0xA 0xB 0x3
-    Sfx: 1a 1b 1c 1d 1f 1z 2a 2b
-    Pfx: a1 b1 c1 d1 f1 z1 a2 b2
-    double triple forthable quadro //float
+  Number.Trycode
+  num.bin:0 1
+  num.?bin:O l
+  num.oct:0 1 2 3 4 5 6 7 8
+  num.dec.0 1 2 3 4 5 6 7 8 9
+  hex:0x1 0xA 0xB 0x3
+  sfx: 1a 1b 1c 1d 1f 1z 2a 2b
+  pfx: a1 b1 c1 d1 f1 z1 a2 b2
+  mik.thr.try:1a1 a1a 1a1
+  mid.for.foz:a1a1 1a12 //数4个
+  mix.rec.agl:wasd 
+    @^ 三角 介入角动作 
+    1
+    1 2
+    1 2 3
+    @# 正方角  介入角动作 
+    1
+    1 2
+    1 2 3
+    1 2 3 4
+
+  KolorSpace.VolumnSaved
+    FullFilled
+  ColorZero.Based
+    For Numeric
+
+  Fond.Number:....
+  Tryant.Color:tr tg tb 
+  Tryant.Number:tf ft
 Each-Group
 </pre>
 	</body>
