--- a/Autodesk/desk/ayric-pixel.html
+++ b/Autodesk/desk/ayric-pixel.html
@@ -51,30 +51,28 @@ Single~Globe
   Trycode:Number
     fond.fact.rect :try.tic.tek
     sin.dot: . 
-    num.bin: 
+    bin.num: 
       l O 
       0 1
     bin.num.and.let.are.dup// 11 aa duplicatine ?
-    bin.num:seq
-      11 12 21 13 31 14 41 23 32 34 43
-    bin.mic.num-let 
-     1a 1b 1c 1d 
-    bin.mic.let-num 
+  
+    let.asc
+      ab ba ac ca bc cb
+    byc.num-let 
+     1a 1b 1c 1d  
      a1 b1 c1 d1
-    bin.let:seq
-      aa ab ba ac ca ad da
-    bin.mic.try:mix
-      1a a1  
-    Number.Direct.Metrik
-      ndm.num.eit:0 1 2 3 4 5 6 7 8
-      ndm.num.ten.0 1 2 3 4 5 6 7 8 9
-      ndm.num.hex:0x1 0xA 0xB 0x3
-
-    tyc.mic://Analytical/analytical/func/permutation.html
-      num.let.num
-      let.num.let 
     tyc.klr
       r g b
+    tyc://Analytical/analytical/func/permutation.html
+      num.let.num
+      let.num.let 
+
+    Number.Direct.Metrik
+      ndm.num.eit:1 2 3 4 5 6 7 8 0
+      ndm.num.ten.1 2 3 4 5 6 7 8 9 0
+      ndm.num.hex:0x1 0xA 0xB 0x3
+    Mytric.Seq:Byc-Tyc:Dyx
+   
 
     fond.dwf.num:1111 2222 3333 4444 //数4个
     fond.dwf.mic:a111 111b 1a1b 1ab1
@@ -101,6 +99,7 @@ Qualificate //量
   Fond.Method
   Tryant.Colorize
 Each-Group
+
 </pre>
 	</body>
 </html>
