--- a/Autodesk/desk/ionic-fond.html
+++ b/Autodesk/desk/ionic-fond.html
@@ -5,6 +5,11 @@
 	</head>
 	<body>
 <pre>
+
+Taskes: Renliy.In:Source.Substance
+  Pus:Prioity Utility Sequalet
+  Ksf:Kount Sequence Frequency
+
 Renliy.Analytick.HeadBrain.Movabilizing
     Aboriginal
       GlobalOriginal
