--- a/Analytical/analytical/absock.html
+++ b/Analytical/analytical/absock.html
@@ -1,10 +1,21 @@
-﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-    <title></title>
-</head>
-<body>
-<pre>
+﻿<pre>
+Absock
+   
+Human.Asck.Utlize.Computer.Requires.Electronic
+  Voltage:high,low
+  Chip Circit 
+  Human.Computer.Readable.Source:
+    Arbian number // Baidu.Said.IndiaCreated
+      0 Westerner redeemed as Circle Empty Dimension
+      1 Source.Substance
+    Electric.UltralFast.Drive 
+Neglect.NotUtilized:Solid
+  Civilized.Need.Founder
+    Fond
+    Tryiac Triack Tryick
+  Leonic.Find.SourcedFrom
+Loop.Particle.Undiggable
+ 
 Device Interface Bodypart
 
 Dcibt:Habit
@@ -42,6 +53,14 @@ Digits.High^Low.Definte:Olympick.ZeroNeo
     Byte
 
 Half-Life.Unicode
+
+Afd
+Pain.Mutrual.Index
+  of aaf
+Human.Career.Essue.Raise.Eassy
+  Doctor
+  Computer
+NumberDigit,NumberQuntaint.Assmbily,Compile
+    digit.argus.vesaid.rollback
+    word.example:tablet
 </pre>
-</body>
-</html>
