--- a/Analytical/analytical/fond/hypertext.html
+++ b/Analytical/analytical/fond/hypertext.html
@@ -1,4 +1,12 @@
-﻿div 窗体 窗口 视窗 方框 window win
+﻿<textarea cols="30" rows="5" id="tea">
+领先的 Web 技术教程 - 全部免费
+在w3school，你可以找到你所需要的所有的网站建设教程。
+从基础的HTML到XHTML，乃至进阶的XML、SQL、数据库、多媒体和WAP。
+<b>
+asdf</b>
+
+
+div 窗体 窗口 视窗 方框 window win
 a 链接 
 href 网址 地址 
 button 按钮
@@ -33,3 +41,5 @@ Index[0,6] = window:
     width
     height
     date
+</textarea>
+<script src="fundematic.js" type="text/javascript"></script>
